<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:onClick="OnclickBtnLogin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/GNom"
            android:hint="@string/login_nom" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/Login_pass"
            android:hint="@string/login_passwd" />

        <Button
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in_button"
            android:id="@+id/login_button"
            android:layout_below="@+id/Login_pass"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:onClick="OnclickBtnLogin"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/signup_button"
            android:id="@+id/redirect_signup_button"
            android:layout_gravity="center_horizontal"
            android:onClick="OnclickBtnLogin" />

    </LinearLayout>
</FrameLayout>
